Change the background color and change hr to dotted hr

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Arun's personal site</title>
+  
+  <style>
+    body {
+    background-color:#EAF6f6;
+    }
+    hr {
+      /* background-color: white;  no need when we color */
+      /* border-width: 1px; */    /* we can either use one of them - height*/
+      height: 0px;      /*should set to zero if we want to get dotted hr */
+      border-style: none;
+      border-top: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+  </style> 
+
 </head>
 
 <body>
@@ -84,13 +101,11 @@
     </tr>
   </table>
 
-    <br>
+  <br>
 
-    <a href="myhobbies.html">My hobbies</a>
+  <a href="myhobbies.html">My hobbies</a>
 
-    <a href="contactme.html">Contact Me</a>
-
-
+  <a href="contactme.html">Contact Me</a>
 
 </body>
 
