Added class and id attribute to html tag. Styled the elements using class and id in styles.css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img width="200" src="image/photocopy-modified.png" alt="Arun profile photo"> </td>
+      <td> <img class="myphoto" width="200" src="image/photocopy-modified.png" alt="Arun profile photo"> </td>
      <td>
-      <h1>Arun Kumar P</h1>
+      <h1 id="name">Arun Kumar P</h1>
         <p><em>Student of <strong><a href="https://www.dsu.edu.in/" target="_blank">Dayananda Sagar University</a></strong></em></p>
         <p><em>Department of <strong><a href="https://en.wikipedia.org/wiki/Electronic_engineering">Electronics and Communication</a></strong></em></p>
         <p>I am a 4th year student and 💖 love to make great websites </p>
