--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img class="myphoto" width="200" src="image/photocopy-modified.png" alt="Arun profile photo"> </td>
+      <td> <img class="myphoto" width="200" src="image/boy.png" alt="Arun profile photo"> </td>
      <td>
       <h1 id="name">Arun Kumar P</h1>
         <p><em>Student of <strong><a href="https://www.dsu.edu.in/" target="_blank">Dayananda Sagar University</a></strong></em></p>
         <p><em>Department of <strong><a href="https://en.wikipedia.org/wiki/Electronic_engineering">Electronics and Communication</a></strong></em></p>
-        <p>I am a 4th year student and 💖 love to make great websites </p>
+        <p>I am a 4th year student and I would 💖 to build websites </p>
       </td>
     </tr>
   </table>
